# services/advanced/AdvancedServices/Request/UnsubscribeServiceRequest.cs
@@ -1,0 +1,10 @@
+﻿using EventBus.Event;
+
+namespace AdvancedServices.Request;
+
+public class UnsubscribeServiceRequest
+{
+    public string Name { get; set; }
+
+    public Credentials Credentials { get; set; }
+}
